--- a/src/app/modules/dashboard/articles-by-media/articles-by-media.component.html
+++ b/src/app/modules/dashboard/articles-by-media/articles-by-media.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="mb-4">
     <div class="text-xl font-semibold" appTitleCase>
-      Article {{ mediaName && "of " + mediaName }} {{ category_id && "of " + category_id }}  with {{ toneLabel }} tone
+      Article of {{ mediaName }}
     </div>
   </div>
   <spinner [spinning]="isLoading">
