--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -66,7 +66,9 @@
     <ng-template pTemplate="end">
       <div class="flex align-items-center gap-4">
         <toggle-darkmode></toggle-darkmode>
-        <i class="pi pi-search font-bold"></i>
+        <div class="cursor-pointer" routerLink="/dashboard/search">
+          <i class="pi pi-search font-bold"></i>
+        </div>
         <div class="flex cursor-pointer" (click)="menu.toggle($event)">
           <p-avatar
             shape="circle"
@@ -108,7 +110,8 @@
     </aside>
     <section
       [ngClass]="{
-        'w-full md:w-full lg:w-full xl:w-10 xl:max-w-10 overflow-hidden': showFilter,
+        'w-full md:w-full lg:w-full xl:w-10 xl:max-w-10 overflow-hidden':
+          showFilter,
         'w-full': !showFilter
       }"
     >
