News Index: download pdf & docs

--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -25,7 +25,7 @@
         <div>
           <p-confirmPopup></p-confirmPopup>
           <p-button
-            label="Update Tone"
+            label="Action"
             icon="pi pi-file-edit"
             [disabled]="!selectedArticles.length"
             (click)="menu.toggle($event)"
