--- a/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
@@ -20,56 +20,57 @@
       </div>
     </spinner>
   </div>
-  <div>
-    <div class="relative">
-      <p-tabMenu
-        [model]="tabItems"
-        [activeItem]="activeTab"
-        (activeItemChange)="onActiveItemChange($event)"
-      >
-        <ng-template pTemplate="item" let-item>
-          <div
-            class="p-menuitem-link flex justify-content-between align-items-center cursor-pointer"
-          >
-            <div class="flex align-items-center gap-2">
-              <icon-newspaper
-                [width]="20"
-                [height]="20"
-                *ngIf="item.key === 'media'"
-                [class]="activeTab?.['key'] === 'media' ? 'fill-primary' : ''"
-              ></icon-newspaper>
-              <icon-pencil
-                *ngIf="item.key === 'coverage'"
-                [class]="activeTab?.['key'] === 'coverage' ? 'fill-primary' : ''"
-              ></icon-pencil>
-              <div class="text-xs font-medium">{{ item.label }}</div>
+  <spinner [spinning]="downloading">
+    <div>
+      <div class="relative">
+        <p-tabMenu
+          [model]="tabItems"
+          [activeItem]="activeTab"
+          (activeItemChange)="onActiveItemChange($event)"
+        >
+          <ng-template pTemplate="item" let-item>
+            <div
+              class="p-menuitem-link flex justify-content-between align-items-center cursor-pointer"
+            >
+              <div class="flex align-items-center gap-2">
+                <icon-newspaper
+                  [width]="20"
+                  [height]="20"
+                  *ngIf="item.key === 'media'"
+                  [class]="activeTab?.['key'] === 'media' ? 'fill-primary' : ''"
+                ></icon-newspaper>
+                <icon-pencil
+                  *ngIf="item.key === 'coverage'"
+                  [class]="activeTab?.['key'] === 'coverage' ? 'fill-primary' : ''"
+                ></icon-pencil>
+                <div class="text-xs font-medium">{{ item.label }}</div>
+              </div>
             </div>
-          </div>
-        </ng-template>
-      </p-tabMenu>
-      <div class="absolute top-0 right-0 mb-2">
-        <button-secondary
-          label="Download"
-          icon="pi pi-chevron-down"
-          (click)="this.downloadActive = !this.downloadActive"
-          (blur)="this.downloadActive = !this.downloadActive"
-        ></button-secondary>
-        <p-tieredMenu
-          *ngIf="this.downloadActive"
-          [model]="downloadItems"
-          styleClass="text-sm absolute"
-          (blur)="this.downloadActive = !this.downloadActive"
-          [style]="{ right: '8px', zIndex: 99 }"
-        ></p-tieredMenu>
+          </ng-template>
+        </p-tabMenu>
+        <div class="absolute top-0 right-0 mr-1 mb-2 z-5">
+          <button-secondary
+            label="Download"
+            icon="pi pi-chevron-down"
+            (click)="menu.toggle($event)"
+          ></button-secondary>
+          <p-tieredMenu
+            #menu
+            [popup]="true"
+            [model]="downloadItems"
+            appendTo="body"
+            styleClass="text-sm"
+          ></p-tieredMenu>
+        </div>
+      </div>
+      <div class="py-4">
+        <app-media-visibility
+          *ngIf="activeTab && activeTab['key'] === 'media'"
+        ></app-media-visibility>
+        <app-coverage-tone
+          *ngIf="activeTab && activeTab['key'] === 'coverage'"
+        ></app-coverage-tone>
       </div>
     </div>
-    <div class="py-4">
-      <app-media-visibility
-        *ngIf="activeTab && activeTab['key'] === 'media'"
-      ></app-media-visibility>
-      <app-coverage-tone
-        *ngIf="activeTab && activeTab['key'] === 'coverage'"
-      ></app-coverage-tone>
-    </div>
-  </div>
+  </spinner>
 </section>
