--- a/src/app/modules/dashboard/analyze/top-issue/coverage-tone/coverage-tone.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/coverage-tone/coverage-tone.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="grid">
     <div class="xl:col-6 lg:col-6 col-12">
-      <chart-card title="Visibility Chart">
+      <chart-card title="Coverage Tone" id="coverageTone">
         <p-chart
           type="bar"
           [data]="coverageChartData"
@@ -11,7 +11,7 @@
       </chart-card>
     </div>
     <div class="xl:col-6 lg:col-6 col-12">
-      <chart-card title="Coverage Pie">
+      <chart-card title="Coverage Pie" id="coveragePie">
         <div class="flex align-items-center gap-6">
           <div
             id="coverage-legend-container"
@@ -29,7 +29,7 @@
       </chart-card>
     </div>
     <div class="xl:col-6 lg:col-6 col-12">
-      <chart-card title="Tone by Media Selection">
+      <chart-card title="Tone by Media Selection" id="toneByMedia">
         <p-chart
           type="bar"
           [data]="toneByMediaChartData"
@@ -39,7 +39,7 @@
       </chart-card>
     </div>
     <div class="xl:col-6 lg:col-6 col-12">
-      <chart-card title="Tone by Category">
+      <chart-card title="Tone by Category" id="toneByCategory">
         <p-chart
           type="bar"
           [data]="toneByCategChartData"
