--- a/src/app/modules/dashboard/newsindex/newsindex.component.scss
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.scss
@@ -2,4 +2,9 @@
   .links .active svg {
     fill: var(--primary-color);
   }
+
+  .p-tieredmenu .p-submenu-list {
+    right: 100%;
+    left: unset;
+  }
 }
