overview: total articles redicrect

--- a/src/app/modules/dashboard/overview/overview-tiles/overview-tiles.component.html
+++ b/src/app/modules/dashboard/overview/overview-tiles/overview-tiles.component.html
@@ -39,6 +39,7 @@
         [content]="mediaCount.total"
         icon="stack"
         color="#1B81E2"
+        link="/dashboard/articles"
         bgColor="#e8f2fc"
       ></app-tile>
     </div>
