dashboard: image from api

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -2,12 +2,12 @@
   <p-toolbar styleClass="flex-nowrap">
     <ng-template pTemplate="start">
       <img src="../../../assets/skema-logo.png" height="20" class="mr-2" />
-      <p-divider layout="vertical" class="logo-divider"></p-divider>
-      <img
-        src="../../../assets/BPJS_Kesehatan_logo.png"
-        height="20"
-        class="mr-2"
-      />
+      <p-divider
+        *ngIf="image"
+        layout="vertical"
+        class="logo-divider"
+      ></p-divider>
+      <img *ngIf="image" [src]="image" height="20" class="mr-2" />
     </ng-template>
     <ng-template pTemplate="center">
       <p-tabMenu
