--- a/src/app/modules/dashboard/components/filter/filter.component.html
+++ b/src/app/modules/dashboard/components/filter/filter.component.html
@@ -14,6 +14,7 @@
     <p-dropdown
       [(ngModel)]="selectedCategory"
       [options]="categoryOptions"
+      (ngModelChange)="onChangeCategory($event)"
       optionLabel="name"
       optionValue="value"
       placeholder="All Category"
