--- a/src/app/modules/dashboard/newsindex/newsindex.component.html
+++ b/src/app/modules/dashboard/newsindex/newsindex.component.html
@@ -111,9 +111,9 @@
                     [content]="getToneLabel(article.tone)"
                     [type]="article.tone ?? 0"
                   ></tag>
-                  <div>
+                  <a [href]="article.file_pdf" target="_blank" class="text-primary">
                     {{ article.media_name }}
-                  </div>
+                  </a>
                 </div>
               </td>
               <td>{{ article.title }}</td>
