Remove profile image, download excel&ppt, init darkmode

--- a/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
@@ -20,7 +20,7 @@
       </div>
     </spinner>
   </div>
-  <spinner [spinning]="downloading">
+  <spinner [spinning]="isConvertingImages">
     <div>
       <div class="relative">
         <p-tabMenu
@@ -65,12 +65,120 @@
       </div>
       <div class="py-4">
         <app-media-visibility
-          *ngIf="activeTab && activeTab['key'] === 'media'"
+          *ngIf="
+            isConvertingImages || (activeTab && activeTab['key'] === 'media')
+          "
         ></app-media-visibility>
         <app-coverage-tone
-          *ngIf="activeTab && activeTab['key'] === 'coverage'"
+          *ngIf="
+            isConvertingImages || (activeTab && activeTab['key'] === 'coverage')
+          "
         ></app-coverage-tone>
       </div>
     </div>
   </spinner>
 </section>
+
+<p-dialog
+  header="Header"
+  [(visible)]="downloadExcelConfirmModalOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Download Excel File</span>
+    </div>
+  </ng-template>
+  <div>
+    <div class="mb-2 font-semibold">Columns:</div>
+    <p-listbox
+      [(ngModel)]="selectedColumns"
+      [options]="columnsOptions"
+      [selectAll]="isSelectAllColumns"
+      optionLabel="label"
+      [multiple]="true"
+      [checkbox]="true"
+      [metaKeySelection]="false"
+      [showToggleAll]="true"
+      (onChange)="onChangeColumn($event)"
+      (onSelectAllChange)="onSelectAllColumnsChange($event)"
+    ></p-listbox>
+    <div class="mt-4 mb-2 font-semibold">Categories:</div>
+    <p-listbox
+      [(ngModel)]="selectedCategories"
+      [options]="categoriesOptions"
+      [selectAll]="isSelectAllCategories"
+      optionLabel="label"
+      [multiple]="true"
+      [checkbox]="true"
+      [metaKeySelection]="false"
+      [showToggleAll]="true"
+      (onChange)="onChangeCategory($event)"
+      (onSelectAllChange)="onSelectAllCategoryChange($event)"
+    ></p-listbox>
+  </div>
+  <div class="mt-5"><span class="font-semibold">Note:</span> you can only download the columns that are selected.</div>
+  <ng-template pTemplate="footer">
+    <div class="pt-4">
+      <p-button
+        (click)="downloadExcelConfirmModalOpen = false"
+        label="Cancel"
+        pAutoFocus
+        [outlined]="true"
+        [disabled]="isDownloadingExcel"
+      ></p-button>
+      <p-button
+        [loading]="false"
+        label="Download"
+        pAutoFocus
+        [disabled]="
+          this.selectedCategories.length === 0 ||
+          this.selectedColumns.length === 0
+        "
+        [autofocus]="true"
+        [loading]="isDownloadingExcel"
+        (click)="downloadExcel()"
+      ></p-button>
+    </div>
+  </ng-template>
+</p-dialog>
+
+<p-dialog
+  header="Header"
+  [(visible)]="downloadConfirmModalOpen"
+  [modal]="true"
+  [style]="{ width: '50rem' }"
+  [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
+>
+  <ng-template pTemplate="header">
+    <div class="inline-flex align-items-center justify-content-center gap-2">
+      <span class="font-bold text-md">Download PPT file</span>
+    </div>
+  </ng-template>
+  <div>
+    <div *ngFor="let image of images">
+      <img [src]="image.image" class="w-full" />
+    </div>
+  </div>
+  <ng-template pTemplate="footer">
+    <div class="pt-4">
+      <p-button
+        (click)="downloadConfirmModalOpen = false"
+        label="Cancel"
+        pAutoFocus
+        [outlined]="true"
+        [disabled]="isDownloading"
+      ></p-button>
+      <p-button
+        [loading]="false"
+        label="Download"
+        pAutoFocus
+        [autofocus]="true"
+        [loading]="isDownloading"
+        (click)="downloadPpt()"
+      ></p-button>
+    </div>
+  </ng-template>
+</p-dialog>
