--- a/src/app/modules/dashboard/overview/overview.component.html
+++ b/src/app/modules/dashboard/overview/overview.component.html
@@ -1,4 +1,4 @@
-<section style="background-color: #fefefe">
+<section style="background-color: var(--bg-color)">
   <app-overview-tiles></app-overview-tiles>
   <p-divider styleClass="py-4"></p-divider>
   <div class="grid w-full mb-5">
