--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,3 +119,37 @@ button {
   width: 18px;
   height: 18px;
 }
+
+body {
+  --bg-color: var(--surface-0);
+  background-color: var(--bg-color);
+  
+  // div,
+  // span,
+  // h1,
+  // h2,
+  // h3,
+  // h4,
+  // h5,
+  // h6,
+  // p {
+  //   color: var(--text-color);
+  // }
+}
+
+body.dark {
+  --bg-color: #060619;
+  background-color: var(--bg-color);
+
+  div,
+  span,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    color: var(--surface-0) !important;
+  }
+}
