--- a/src/app/modules/dashboard/components/toggle-darkmode/toggle-darkmode.component.html
+++ b/src/app/modules/dashboard/components/toggle-darkmode/toggle-darkmode.component.html
@@ -1,8 +1,11 @@
 <div>
-  <input type="checkbox" class="checkbox" id="checkbox" />
+  <input [(ngModel)]="checked" (ngModelChange)="onChange($event)" type="checkbox" class="checkbox" id="checkbox" />
   <label for="checkbox" class="checkbox-label">
-    <icon-sun class="icon-sun"></icon-sun>
-    <icon-moon class="icon-moon"></icon-moon>
+    <icon-sun
+      class="icon-sun"
+      [fill]="!checked ? 'white' : '#8A90AB'"
+    ></icon-sun>
+    <icon-moon class="icon-moon" [fill]="checked ? 'white' : '#8A90AB'"></icon-moon>
     <span class="ball"></span>
   </label>
 </div>
