--- a/src/app/modules/dashboard/media-sov/media-name/media-name.component.html
+++ b/src/app/modules/dashboard/media-sov/media-name/media-name.component.html
@@ -23,7 +23,7 @@
             <div class="flex align-items-center py-1 gap-3">
               <div class="w-4rem pl-1">
                 <img
-                  [src]="item.image"
+                  [src]="item.image_url"
                   [alt]="item.media_name"
                   class="h-4rem w-full border-round"
                   style="object-fit: cover"
