--- a/src/app/modules/dashboard/media-sov/statements/statements.component.html
+++ b/src/app/modules/dashboard/media-sov/statements/statements.component.html
@@ -5,7 +5,7 @@
       [width]="20"
       [height]="16"
     ></icon-dialogue>
-    <div class="text-sm font-semibold">Statements</div>
+    <div class="text-sm font-semibold">Articles</div>
     <icon-info></icon-info>
   </div>
   <spinner [spinning]="isLoading">
@@ -60,7 +60,7 @@
                     <div class="flex align-items-center gap-2">
                       <i class="pi pi-clock text-500 text-xs"></i>
                       <span class="text-xs text-500 p-0 mt-0">{{
-                        item.datee.split("?")[0]
+                        item.datee.split(" ")[0]
                       }}</span>
                     </div>
                   </div>
