--- a/src/app/modules/dashboard/overview/top-article/top-article.component.html
+++ b/src/app/modules/dashboard/overview/top-article/top-article.component.html
@@ -62,7 +62,7 @@
                       <span
                         class="text-xs text-500 p-0 mt-0 white-space-nowrap overflow-hidden text-overflow-ellipsis"
                         style="width: 80px"
-                        >{{ item.journalist }}</span
+                        >{{ item.media_name }}</span
                       >
                     </div>
                     <div class="flex align-items-center gap-2">
