--- a/src/app/core/components/tile/tile.component.html
+++ b/src/app/core/components/tile/tile.component.html
@@ -1,6 +1,6 @@
 <p-card
   styleClass="relative shadow-none border-1 border-200"
-  [style]="{ width: '260px' }"
+  [style]="{ width: '260px', backgroundColor: 'var(--card-color)' }"
 >
   <div class="flex p-4">
     <div class="flex gap-3">
