--- a/src/app/modules/dashboard/components/filter/filter.component.html
+++ b/src/app/modules/dashboard/components/filter/filter.component.html
@@ -18,6 +18,7 @@
       optionLabel="name"
       optionValue="value"
       placeholder="All Category"
+      [style]="{backgroundColor: 'var(--bg-color)'}"
       inputId="category"
       [disabled]="isLoadingCategoryOptions"
     ></p-dropdown>
