analyze: top 10 issue

--- a/src/app/modules/dashboard/articles-by-media/articles-by-media.component.html
+++ b/src/app/modules/dashboard/articles-by-media/articles-by-media.component.html
@@ -1,7 +1,7 @@
 <section>
   <div class="mb-4">
     <div class="text-xl font-semibold" appTitleCase>
-      Article of {{ mediaName }}
+      Article of {{ mediaName ?? topic }}
     </div>
   </div>
   <spinner [spinning]="isLoading">
