--- a/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
+++ b/src/app/modules/dashboard/analyze/top-issue/top-issue.component.html
@@ -1,16 +1,17 @@
 <section>
-  <div class="flex align-items-center gap-2 mb-4">
-    <icon-newspaper fill="var(--primary-color)"></icon-newspaper>
-    <div class="text-sm font-semibold">Top 10 Issue</div>
-    <icon-info></icon-info>
-  </div>
-  <div class="mb-5">
-    <spinner [spinning]="isLoading">
+  <spinner [spinning]="isLoading">
+    <div class="flex align-items-center gap-2 mb-4">
+      <icon-newspaper fill="var(--primary-color)"></icon-newspaper>
+      <div class="text-sm font-semibold">Top 10 Issue</div>
+      <icon-info></icon-info>
+    </div>
+    <div class="mb-5 w-full h-full">
       <canvas
         [ngClass]="{ hidden: !isDataExist }"
         #chartArea
         width="800"
         height="400"
+        class="w-full h-full"
       ></canvas>
       <div
         *ngIf="!isDataExist"
@@ -18,8 +19,8 @@
       >
         No Data.
       </div>
-    </spinner>
-  </div>
+    </div>
+  </spinner>
   <spinner [spinning]="isConvertingImages">
     <div>
       <div class="relative">
@@ -119,7 +120,10 @@
       (onSelectAllChange)="onSelectAllCategoryChange($event)"
     ></p-listbox>
   </div>
-  <div class="mt-5"><span class="font-semibold">Note:</span> you can only download the columns that are selected.</div>
+  <div class="mt-5">
+    <span class="font-semibold">Note:</span> you can only download the columns
+    that are selected.
+  </div>
   <ng-template pTemplate="footer">
     <div class="pt-4">
       <p-button
