overview: implement dark mode

--- a/src/app/core/components/tag/tag.component.html
+++ b/src/app/core/components/tag/tag.component.html
@@ -1,3 +1,11 @@
-<div class="text-xs border-round m-0" [style]="{ color: color, backgroundColor: bgColor, padding: '2px 4px' }">
+<i
+  class="text-xs border-round m-0"
+  [style]="{
+    color: color,
+    backgroundColor: bgColor,
+    padding: '2px 4px',
+    fontStyle: 'normal'
+  }"
+>
   {{ content }}
-</div>
+</i>
