--- a/src/app/modules/dashboard/overview/top-article/top-article.component.html
+++ b/src/app/modules/dashboard/overview/top-article/top-article.component.html
@@ -29,7 +29,7 @@
           >
             <div
               class="flex flex-column xl:flex-row xl:align-items-start py-3 gap-4"
-              [ngClass]="{ 'border-top-1 surface-border': !options.first }"
+              [ngClass]="{ 'border-top-1 border-200': !options.first }"
             >
               <div class="w-6rem">
                 <img
