--- a/src/app/modules/dashboard/overview/top-city/top-city.component.scss
+++ b/src/app/modules/dashboard/overview/top-city/top-city.component.scss
@@ -1,8 +1,15 @@
 :host {
   ::ng-deep .p-datatable .p-datatable-thead > tr > th {
-    background: white;
+    background: var(--bg-color);
     padding: 0 20px 0 0;
     border: 0;
+  }
+
+  ::ng-deep .p-datatable .p-datatable-tbody > tr {
+    background: var(--bg-color);
+    td {
+      border-color: var(--border-color);
+    }
   }
 
   ::ng-deep .p-datatable .p-datatable-tbody > tr > td {
