--- a/src/app/core/components/chart-card/chart-card.component.html
+++ b/src/app/core/components/chart-card/chart-card.component.html
@@ -1,4 +1,7 @@
-<p-card styleClass="shadow-none border-1 border-200">
+<p-card
+  styleClass="shadow-none border-1 border-200"
+  [style]="{ backgroundColor: 'var(--card-color)' }"
+>
   <ng-template pTemplate="header">
     <div class="flex justify-content-between align-items-center pt-3 px-3">
       <div class="text-sm font-semibold">{{ title }}</div>
