--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -119,7 +119,7 @@
     </section>
   </div>
 </main>
-<footer class="border-top-1 border-bluegray-100">
+<footer class="border-top-1 border-200">
   <div class="flex justify-content-between py-2 px-4">
     <p>Copyright © 2024 Skema Data Indonesia. All Rights Reserved.</p>
     <div class="flex align-items-center gap-4">
