--- a/src/styles.scss
+++ b/src/styles.scss
@@ -124,6 +124,7 @@ body {
   --bg-color: var(--surface-0);
   --card-color: var(--surface-0);
   background-color: var(--bg-color);
+  --border-color: #e5e7eb;
 
   div,
   // span,
@@ -141,18 +142,41 @@ body {
 body.dark {
   --bg-color: #060619;
   --card-color: #19182b;
+  --border-color: #464255;
   background-color: var(--bg-color);
 
   .border-200 {
-    border-color: #464255 !important;
+    border-color: var(--border-color) !important;
   }
 
   .p-divider.p-divider-vertical:before {
-    border-left: 1px solid #464255 !important;
+    border-left: 1px solid var(--border-color) !important;
   }
 
   .p-divider.p-divider-horizontal:before {
-    border-top: 1px solid #464255 !important;
+    border-top: 1px solid var(--border-color) !important;
+  }
+
+  .p-dropdown-items-wrapper {
+    ul {
+      background-color: var(--card-color);
+    }
+  }
+
+  .p-datepicker,
+  .p-datepicker-header {
+    background-color: var(--card-color);
+    .p-highlight {
+      background-color: var(--bg-color);
+    }
+  }
+
+  .p-button-secondary {
+    background-color: var(--bg-color);
+    border: solid 3px var(--primary-color) !important;
+    span {
+      color: var(--primary-color) !important;
+    }
   }
 
   div,
